--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div id="page" class="routeContainer" [routeAnimation]="getDepth(myOutlet)">
+  <div id="page" class="routeContainer" [@routeAnimation]="getDepth(myOutlet)">
     <router-outlet #myOutlet="outlet"></router-outlet>
   </div>
 </div>
