--- a/src/app/component/contact-form/contact-form.component.html
+++ b/src/app/component/contact-form/contact-form.component.html
@@ -1,3 +1,37 @@
-<p>
-  contact-form works!
-</p>
+<div class="row">
+  <div class="col-md-12 text-center">
+    <img style="width: 70px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo">
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12 text-center">
+    <h2>Few questions about yourself</h2>
+  </div>
+</div>
+
+<div class="row" style="margin-top: 30px;">
+  <div class="col-md-6">
+    <input type="text" class="form-control" id="name" placeholder="Name*">
+  </div>
+  <div class="col-md-6">
+    <input type="email" class="form-control" id="email" placeholder="Email*">
+  </div>
+</div>
+<div class="row" style="margin-top: 20px;">
+  <div class="col-md-6">
+    <input type="text" class="form-control" id="phoneNumber" placeholder="Phone number">
+  </div>
+  <div class="col-md-6">
+    <input type="text" class="form-control" id="website" placeholder="Website/Company">
+  </div>
+</div>
+<div class="row" style="margin-top: 20px;">
+  <div class="col-md-12">
+    <textarea class="form-control" rows="3" placeholder="Text"></textarea>
+  </div>
+</div>
+<div class="row" style="margin-top: 20px;">
+  <div class="col-md-12 text-center">
+    <button id="email-button" style="margin-top: 10px;" class="btn btn-default btn-lg">Submit project</button>
+  </div>
+</div>
