--- a/src/app/component/Header/header.component.html
+++ b/src/app/component/Header/header.component.html
@@ -1,7 +1,7 @@
-<div id="navigation" class="header clearfix">
+<div id="navigation" class="header clearfix" *ngIf="!navIsFixed">
   <nav>
     <ul class="nav nav-pills pull-right">
-      <li class="nav-button"><a href="#">About</a></li>
+      <li class="nav-button"><a href="#intro-section">Home</a></li>
       <li class="nav-button"><a href="#projects">Projects</a></li>
       <li class="nav-button"><a href="#contact">Contact</a></li>
     </ul>
@@ -9,3 +9,25 @@
   <img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo">
 </div>
 <hr/>
+
+
+<nav class="navbar navbar-default navbar-fixed-top" *ngIf="navIsFixed" style="margin-left: 8px; margin-right: 8px;">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" style="padding: 5px 15px;" href="#"><img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo"></a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="nav-button"><a href="#about">About</a></li>
+        <li class="nav-button"><a href="#projects">Projects</a></li>
+        <li class="nav-button"><a href="#contact">Contact</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
