--- a/src/app/component/Contact/contact.component.html
+++ b/src/app/component/Contact/contact.component.html
@@ -4,7 +4,6 @@
     <button id="email-button" style="margin-top: 10px;" data-toggle="modal" data-target="#exampleModalLong"
             class="btn btn-default btn-lg">Send me a email
     </button>
-    <!--(click)="goToContactForm();"-->
   </div>
 
 </div>
@@ -26,32 +25,32 @@
         </div>
         <div class="row" style="margin-top: 10px;">
           <div class="col-md-6">
-            <input type="text" placeholder="Name*"
+            <input type="text" placeholder="Name*" name="name" [(ngModel)]="name"
                    class="form-control input-contact-form pull-right-input-contact-form">
           </div>
           <div class="col-md-6">
-            <input type="text" placeholder="Email address*" class="form-control input-contact-form">
+            <input type="email" placeholder="Email address*"  name="email" [(ngModel)]="email"
+                   class="form-control input-contact-form">
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <input type="text" placeholder="Phone number"
+            <input type="text" placeholder="Phone number" name="phoneNumber" [(ngModel)]="phoneNumber"
                    class="form-control input-contact-form pull-right-input-contact-form">
           </div>
           <div class="col-md-6">
-            <input type="text" placeholder="Website/Company" class="form-control input-contact-form">
+            <input type="text" placeholder="Website/Company" name="website" [(ngModel)]="website"
+                   class="form-control input-contact-form">
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            <textarea class="form-control textarea-contact-form"
-                      placeholder="Tell me about your project, what is it? How can I help?*" rows="3"></textarea>
+            <textarea class="form-control textarea-contact-form" name="projectInfo" [(ngModel)]="projectInfo"
+                      placeholder="Tell me about your project, what is it? How can I help?*" rows="3" required></textarea>
           </div>
         </div>
         <div class="row text-center">
-          <button style="margin-top: 30px; border: 3px solid #EDB83D;
-                        color: #EDB83D;
-                          font-family: 'Raleway', sans-serif !important; background-color: #363237;"
+          <button style="margin-top: 30px; border: 3px solid #EDB83D; color: #EDB83D;  font-family: 'Raleway', sans-serif !important; background-color: #363237;" (click)="sendEmail();"
                   class="btn btn-default btn-lg">Submit your project
           </button>
           <br>
