--- a/src/app/component/Header/header.component.html
+++ b/src/app/component/Header/header.component.html
@@ -1,9 +1,10 @@
 <div id="navigation" class="header clearfix" *ngIf="!navIsFixed">
   <nav>
     <ul class="nav nav-pills pull-right">
-      <li class="nav-button"><a href="#intro-section">Home</a></li>
-      <li class="nav-button"><a href="#projects">Projects</a></li>
-      <li class="nav-button"><a href="#contact">Contact</a></li>
+      <li class="nav-button"><a href="#" scrollTo="intro-section">Home</a></li>
+      <li class="nav-button"><a href="#" [offset]="80" scrollTo="projects">Projects</a></li>
+      <li class="nav-button"><a href="#" scrollTo="contact">Contact</a></li>
+
     </ul>
   </nav>
   <img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo">
@@ -11,7 +12,7 @@
 <hr/>
 
 
-<nav class="navbar navbar-default navbar-fixed-top" *ngIf="navIsFixed" style="margin-left: 8px; margin-right: 8px;">
+<nav class="navbar navbar-default navbar-fixed-top" *ngIf="navIsFixed" (show)="navIsFixed" style="margin-left: 8px; margin-right: 8px;">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -24,7 +25,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav-button"><a href="#about">About</a></li>
+        <li class="nav-button"><a href="#">Home</a></li>
         <li class="nav-button"><a href="#projects">Projects</a></li>
         <li class="nav-button"><a href="#contact">Contact</a></li>
       </ul>
