--- a/src/app/component/Header/header.component.html
+++ b/src/app/component/Header/header.component.html
@@ -12,7 +12,7 @@
 <hr/>
 
 
-<nav class="navbar navbar-default navbar-fixed-top" *ngIf="navIsFixed" (show)="navIsFixed" style="margin-left: 8px; margin-right: 8px;">
+<nav class="navbar navbar-default navbar-fixed-top" *ngIf="navIsFixed" (show)="navIsFixed" style="margin-left: 8px; margin-right: 8px; border-top: 8px solid;">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
