--- a/src/assets/toastr.css
+++ b/src/assets/toastr.css
@@ -71,8 +71,8 @@ button.toast-close-button {
   left: 12px;
 }
 .toast-top-right {
-  top: 12px;
   right: 12px;
+  bottom: 12px;
 }
 .toast-bottom-right {
   right: 12px;
