--- a/src/app/component/About/about.component.html
+++ b/src/app/component/About/about.component.html
@@ -1,4 +1,4 @@
-<div id="intro-section" class="text-center">
+<div class="text-center">
   <h1 class="intro-text">Hi, I'm Alin. I design & build </h1>
   <h1 class="intro-text">Web & Mobile applications</h1>
 </div>
@@ -11,17 +11,17 @@
         place
         where I consume my passion for
         development and I am also student in my first year of masters
-        degree learning Telematic Systems for Transports. You can check my work history on <a
+        degree learning Inteligent Transport Systems. You can check my work history on <a
           class="link-button"
           href="https://www.linkedin.com/in/georgian-alin-alexandru-5ab995119/">LinkedIn</a>.
         Outside of work I like to hang out with friends and travel. If you have a project to be done,
         don't
         hesitate
         to
-        <a href="#contact" class="link-button">contact me</a> and get a coffee.
+        <a pageScroll [pageScrollSpeed]="4000" href="#contact" class="link-button">contact me</a> and get a coffee.
       </p>
+      <img src="./../../../assets/me.jpg" class="img-responsive img-thumbnail center-image" alt="Alin Alexandru">
     </div>
   </div>
-
 </div>
 <br>
