--- a/src/app/component/Contact/contact.component.html
+++ b/src/app/component/Contact/contact.component.html
@@ -50,8 +50,8 @@
           </div>
         </div>
         <div class="row text-center">
-          <button style="margin-top: 30px; border: 3px solid #EDB83D; color: #EDB83D;  font-family: 'Raleway', sans-serif !important; background-color: #363237;" (click)="sendEmail();"
-                  class="btn btn-default btn-lg">Submit your project
+          <button (click)="sendEmail();"
+                  class="btn btn-default btn-lg send-email-button">Submit your project
           </button>
           <br>
           <small style="color: #fff !important; font-weight: bold;">* Required</small>
