--- a/src/app/component/Projects/projects.component.html
+++ b/src/app/component/Projects/projects.component.html
@@ -18,7 +18,7 @@
         <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Point Taxi<i
                           class="fa fa-close pull-right"></i></span>
-          <p>I worked on this project with my colleagues at <a href="http://www.aptus.ro/en/">Aptus
+          <p>I worked on this project with my colleagues at <a class="link-button" href="http://www.aptus.ro/en/">Aptus
             Software</a>. My role as a Front End Developer was to create new futures and resolve
             existing bugs.</p>
         </div>
