--- a/src/app/component/Contact/contact.component.css
+++ b/src/app/component/Contact/contact.component.css
@@ -1,62 +1,87 @@
-  .modal-fullscreen {
-    padding: 0 !important;
-  }
-  .modal-fullscreen .modal-dialog {
+.modal-fullscreen {
+  padding: 0 !important;
+}
+
+.modal-fullscreen .modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-fullscreen .modal-content {
+  height: auto;
+  min-height: 100%;
+  border: 0 none;
+  border-radius: 0;
+  background-color: #363237;
+}
+
+.modal.fade .modal-dialog {
+  -webkit-transform: scale(0.1);
+  -moz-transform: scale(0.1);
+  -ms-transform: scale(0.1);
+  transform: scale(0.1);
+  top: 300px;
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.modal.fade.in .modal-dialog {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  -webkit-transform: translate3d(0, -300px, 0);
+  transform: translate3d(0, -300px, 0);
+  opacity: 1;
+}
+
+.send-email-button {
+  margin-top: 30px;
+  border: 3px solid #EDB83D;
+  color: #EDB83D;
+  font-family: 'Raleway', sans-serif !important;
+  background-color: #363237;
+}
+
+@media only screen and (max-width: 500px) {
+  .input-contact-form {
     width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  .modal-fullscreen .modal-content {
-    height: auto;
-    min-height: 100%;
-    border: 0 none;
-    border-radius: 0;
-    background-color: #363237;
+    margin-top: 20px;
   }
 
-
-
-
-
-  @media only screen and (max-width: 500px) {
-    .input-contact-form {
-      width: 100%;
-      margin-top: 20px;
-    }
-
-    .textarea-contact-form {
-      width: 100%;
-      margin-top: 20px;
-    }
-
-
-
-    .logo-contact-form {
-      width: 80px;
-    }
-
-
+  .textarea-contact-form {
+    width: 100%;
+    margin-top: 20px;
   }
 
-  @media only screen and (min-width: 500px) {
-    .input-contact-form {
-      width: 40%;
-      margin-top: 20px;
-    }
-
-    .logo-contact-form {
-      width: 100px;
-    }
-
-    .textarea-contact-form {
-      width: 41%;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 20px;
-    }
-
-    .pull-right-input-contact-form {
-      float: right;
-    }
+  .logo-contact-form {
+    width: 80px;
   }
+
+}
+
+@media only screen and (min-width: 500px) {
+  .input-contact-form {
+    width: 40%;
+    margin-top: 20px;
+  }
+
+  .logo-contact-form {
+    width: 100px;
+  }
+
+  .textarea-contact-form {
+    width: 41%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+  }
+
+  .pull-right-input-contact-form {
+    float: right;
+  }
+}
