--- a/src/app/component/Header/header.component.html
+++ b/src/app/component/Header/header.component.html
@@ -1,12 +1,8 @@
 <div id="navigation" class="header clearfix">
   <nav>
     <ul class="nav nav-pills pull-right">
-      <!--<li class="nav-button"><a href="#" [offset]="80" scrollTo="projects">Projects</a></li>-->
-      <!--<li class="nav-button"><a href="#" scrollTo="contact">Contact</a></li>-->
-
       <li class="nav-button"><a pageScroll [pageScrollSpeed]="4000"  href="#projects" >Projects</a></li>
       <li class="nav-button"><a pageScroll [pageScrollSpeed]="4000" href="#contact">Contact</a></li>
-
     </ul>
   </nav>
   <img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo">
@@ -23,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" style="padding: 5px 15px;" href="#"><img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo"></a>
+      <a class="navbar-brand" pageScroll [pageScrollSpeed]="4000" href="#intro-section" style="padding: 5px 15px;"><img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
