added new stuff

--- a/src/app/component/About/about.component.html
+++ b/src/app/component/About/about.component.html
@@ -1,13 +1,13 @@
 <div class="text-center">
-  <h1 class="intro-text">Hi, I'm Alin. I design & build </h1>
-  <h1 class="intro-text">Web & Mobile applications</h1>
+  <h1 class="intro-text">Hi, I'm Alin. <br/>I build Web & Mobile applications</h1>
+  <!-- <h1 class="intro-text"></h1> -->
 </div>
 <br/>
 <div id="about">
   <div class="row text-center">
     <div class="col-md-12">
       <h3 class="title">About</h3>
-      <p style="text-align: justify;">I currently work as a Web Developer at Systegra Engineering, the
+      <p style="text-align: justify;">I currently work as a Software Engineer at Luxoft, the
         place
         where I consume my passion for
         development and I am also student in my first year of masters
