--- a/src/app/component/Services/services.component.html
+++ b/src/app/component/Services/services.component.html
@@ -7,22 +7,16 @@
     <i class="fa fa-code fa-4x flash-yellow" aria-hidden="true"></i>
     <h4 class="sub-title">FRONT END DEVELOPMENT</h4>
     <p style="text-align: justify;">
-      Building out visual concepts of a website. Using HTML, CSS and Javascript Frameworks I can build
-      fast
-      and
-      interactive websites.
-      I also can bring to life your ideas about mobile apps using React Native, a cross-platform
-      technology.
+      Building out visual concepts of a website. Using HTML, CSS and Javascript Frameworks, I can build fast and interactive websites.
+      I also can bring to life your ideas about mobile apps using React Native, a cross-platform technology.
     </p>
   </div>
   <div class="col-md-6 text-center">
     <i class="fa fa-cogs fa-4x flash-yellow" aria-hidden="true"></i>
     <h4 class="sub-title">BACK END DEVELOPMENT</h4>
     <p style="text-align: justify;">
-      The Back End is the engine that holds up a web app or a mobile app. Using NodeJS with a SQL or
-      NO-SQL
-      Database
-      I can build a app front to back.
+      The Back End is the engine that holds up a web app or a mobile app. Using NodeJS with a SQL or NO-SQL Database, I can build
+      an app front to back.
     </p>
   </div>
 </div>
