--- a/src/app/component/About/about.component.html
+++ b/src/app/component/About/about.component.html
@@ -1,5 +1,6 @@
 <div class="text-center">
-  <h1 class="intro-text">Hi, I'm Alin. <br/>I build Web & Mobile applications</h1>
+  <h1 class="intro-text">Hi, I'm Alin.
+    <br/>I build Web & Mobile applications</h1>
   <!-- <h1 class="intro-text"></h1> -->
 </div>
 <br/>
@@ -7,19 +8,9 @@
   <div class="row text-center">
     <div class="col-md-12">
       <h3 class="title">About</h3>
-      <p style="text-align: justify;">I currently work as a Software Engineer at Luxoft, the
-        place
-        where I consume my passion for
-        development and I am also student in my first year of masters
-        degree learning Inteligent Transport Systems. You can check my work history on <a
-          class="link-button"
-          href="https://www.linkedin.com/in/georgian-alin-alexandru-5ab995119/">LinkedIn</a>.
-        Outside of work I like to hang out with friends and travel. If you have a project to be done,
-        don't
-        hesitate
-        to
-        <a pageScroll [pageScrollSpeed]="4000" href="#contact" class="link-button">contact me</a> and get a coffee.
-      </p>
+      <p>I currently work as a Software Engineer at Luxoft, the place where I consume my passion for development and I am also student in my first year of masters
+        degree learning Intelligent Transport Systems. You can check my work history on <a class="link-button" href="https://www.linkedin.com/in/georgian-alin-alexandru-5ab995119/">LinkedIn</a>. Outside of work, I like
+        to hang out with my friends and travel. If you have a project to be done, don't hesitate to <a pageScroll [pageScrollSpeed]="4000" href="#contact" class="link-button">contact me</a>  and get a coffee.</p>
       <img src="./../../../assets/me.jpg" class="img-responsive img-thumbnail center-image" alt="Alin Alexandru">
     </div>
   </div>
