--- a/src/app/component/Header/header.component.html
+++ b/src/app/component/Header/header.component.html
@@ -5,7 +5,7 @@
       <li class="nav-button"><a pageScroll [pageScrollSpeed]="4000" href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo">
+  <img class="my-logo" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo">
 </div>
 <hr/>
 
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" pageScroll [pageScrollSpeed]="4000" href="#intro-section" style="padding: 5px 15px;"><img style="width: 40px;" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo"></a>
+      <a class="navbar-brand" pageScroll [pageScrollSpeed]="4000" href="#intro-section" style="padding: 5px 15px;"><img class="my-logo" src="../../../assets/logo/Portfolio%20logo.svg" alt="logo"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
