--- a/src/app/component/Footer/footer.component.html
+++ b/src/app/component/Footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <img style="width: 40px;" src="./assets/logo/Portfolio%20logo.svg" alt="logo">
   </div>
-  <p style="margin-top: 5px;">Handmade by me © 2017.</p>
+  <p style="margin-top: 5px;">Handmade by me 2018.</p>
   <br/>
   <div id="social-media">
     <a href="https://www.facebook.com/georgian.alin.77?ref=bookmarks">
