--- a/src/app/component/Contact/contact.component.css
+++ b/src/app/component/Contact/contact.component.css
@@ -43,16 +43,11 @@
   border: 3px solid #EDB83D;
   color: #EDB83D;
   font-family: 'Raleway', sans-serif !important;
-  transition: all 0.5s ease-out;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
 }
 
-#email-button:hover {
-  padding: 10px 27px;
-  border-radius: 20px;
-  background-color: #EDB83D;
-  color: #363237;
-  font-weight: bolder;
-}
+
 
 .send-email-button {
   margin-top: 30px;
@@ -60,37 +55,56 @@
   color: #EDB83D;
   font-family: 'Raleway', sans-serif !important;
   background-color: #363237;
-  transition: all 0.5s ease-out;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
 }
 
-.send-email-button:hover{
-  padding: 10px 27px;
-  border-radius: 20px;
-  background-color: #EDB83D;
-  color: #363237;
-  font-weight: bolder;
+
+
+.input-container {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media only screen and (max-width: 500px) {
-  .input-contact-form {
-    width: 100%;
+   .input-contact-form {
     margin-top: 20px;
   }
 
   .textarea-contact-form {
-    width: 100%;
     margin-top: 20px;
+  } 
+
+  .input-container {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .logo-contact-form {
     width: 80px;
   }
-
 }
 
 @media only screen and (min-width: 500px) {
+  #email-button:hover {
+    padding: 10px 27px;
+    border-radius: 20px;
+    background-color: #EDB83D;
+    color: #363237;
+    font-weight: bolder;
+  }
+
+  .send-email-button:hover{
+    padding: 10px 27px;
+    border-radius: 20px;
+    background-color: #EDB83D;
+    color: #363237;
+    font-weight: bolder;
+  }
+  
   .input-contact-form {
-    width: 40%;
     margin-top: 20px;
   }
 
@@ -99,13 +113,6 @@
   }
 
   .textarea-contact-form {
-    width: 41%;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 20px;
-  }
-
-  .pull-right-input-contact-form {
-    float: right;
   }
 }
